# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: main.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/apps/example_app/db/: __init__.py
app/apps/example_app/db/crud/: __init__.py  item.py
app/apps/example_app/db/models/: __init__.py  item.py
app/apps/example_app/routers/: __init__.py  item.py
app/apps/example_app/schemas/: __init__.py  item.py
app/core/: config.py  enums.py  logger.py  utils.py
app/core/db/: __init__.py  config.py
app/core/db/crud/: __init__.py  base.py  user.py
app/core/db/models/: __init__.py  base.py  user.py
app/core/dependencies/: __init__.py  auth.py  db.py  internal.py
app/core/exceptions/: __init__.py  handlers.py  types.py
app/core/services/: __init__.py  base.py  event_publisher.py  lifecycle.py
app/infrastructure/messaging/: __init__.py  connection.py  consumer.py  main.py  publisher.py  queues.py
app/infrastructure/scheduler/: __init__.py  jobs.py  main.py
migrations/: env.py
tests/: conftest.py  test_main.py
